Refactored LoggerContext factories to allow test loggers of different frameworks to live side by side